--- a/time_front/public/index.html
+++ b/time_front/public/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <meta name="author" content="Time de futebol - Monte sue time" />
 
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="icon" href="<%= BASE_URL %>favicon.ico">
-	<meta name="author" content="Econet Editora">
+    <title>TIME DE FUTEBOL | fBasilio - 2019</title>
+    <meta
+      name="description"
+      content="Projeto de sistema para montar e organizar times de futebol."
+    />
 
-	<title>PROJETO fBasilio - 2019</title>
-	<meta name="description" content="Simulador de cálculos para efetuar um comparativo em relação a todos os cenários e regimes tributários.">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.materialdesignicons.com/3.6.95/css/materialdesignicons.min.css"
+    />
+  </head>
 
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-	<link rel="stylesheet" href="https://cdn.materialdesignicons.com/3.6.95/css/materialdesignicons.min.css">
-</head>
-
-<body>
-	<noscript>
-		<strong>We're sorry but front-spte doesn't work properly without JavaScript enabled. Please enable it to
-			continue.</strong>
-	</noscript>
-	<div id="app"></div>
-	<!-- built files will be auto injected -->
-</body>
-
+  <body>
+    <noscript>
+      <strong
+        >We're sorry but front-spte doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      >
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
